  texture mapping routines (c, fp, i386, pent, ppro) at runtime.
- Please bear with me while the source undergoes some rather ugly
  reorganization to fit more closely to the layout of d1x. This makes
  synchronization with d1x far, far easier.
- Fixed assembly bug causing crash on game start.  Thanks to Craig
  Hadady <chadady@iglou.com>

--- Version 0.1.1 ---
Assembly under mingw32 now works.
Invulnerable robots bug fixed!
Build process much faster.
network support now compiles on mingw, dunno if it works...

--- Version 0.1.0 ---
Builds with SDL/OpenGL, even on Windows (MingW32)
Lots of minor changes and cleanups of the build system.

--- Version 0.0.9 ---
Improved automake setup, 'make dist' and VPATH builds now work.
svgalib, ggi support (alpha)
Merged in joystick support from Michael.Wagener@materna.de
Added -grabmouse option to keep the mouse from wandering away in
windowed SDL.  Pressing pause ungrabs it.

--- Version 0.0.8 ---
Added -nocdrom option, fixed cdrom code.
Made various error messages more helpful.
Big code cleanup - removed lots and lots of warnings. Still plenty left, but most are gone.
Kludge to allow the game to work with v1.0 datafiles.
Workaround for odd gcc bug (possible).
Fixed mission and demo loading.
Fixed nonetwork build.
Removed libtool dependancy. (Thanks to Falk Hueffner for pointing this out)

--- Version 0.0.7 ---
Added beginnings of console. (main/console.c main/cmd.c)
Added -debug command line option to show debug information.
Fixed -nosound option.
Changed malloc, calloc, free -> d_malloc, d_calloc and d_free to prevent ugly clashes between the real and the wrapped system calls. Added d_strdup
Removed dos linefeeds from the source files
Fixed palette problems with flat shaded polygons.

Issues currently under investigation:
* Weird crash reported by Robert Linden - as yet unreproducable

--- Version 0.0.6 ---
Initial ChangeLog entry
No change from v0.0.5 except Makefile/config system cleanup.